--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "html-pdf": "^3.0.1",
     "mongoose": "^7.6.1"
   }
 }
